// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`restore-media-from-recycle-bin should handle non-existent media 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;

exports[`restore-media-from-recycle-bin should restore a media item from recycle bin 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
